--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="username.github.io/folder/ResumeUpdatedMay2022.pdf" target="_blank">My Resume.</a>
+<a href="https://username.github.io/folder/ResumeUpdatedMay2022.pdf" target="_blank">My Resume.</a>
