--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<a href="https://username.github.io/folder/ResumeUpdatedMay2022.pdf" target="_blank">My Resume.</a>
+<!doctype html>
+<html>
+  <head>
+    <title>Andrew's Resume</title>
+  </head>
+  <body>
+    <a href="https://username.github.io/folder/ResumeUpdatedMay2022.pdf" target="_blank">My Resume.</a>
+  </body>
