--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
     <title>Andrew's Resume</title>
   </head>
   <body>
-    <a href="https://username.github.io/folder/ResumeUpdatedMay2022.pdf" target="_blank">My Resume.</a>
+    <embed src="https://aaamg.github.io/folder/ResumeUpdatedMay2022.pdf" type="application/pdf" />
   </body>
