--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <title>Andrew's Resume</title>
   </head>
   <body>
-    <embed src="https://aaamg.github.io/folder/ResumeUpdatedMay2022.pdf" type="application/pdf" />
+    <!-- <embed src="https://aaamg.github.io/folder/ResumeUpdatedMay2022.pdf" type="application/pdf" /> -->
+    <embed src="folder/ResumeUpdatedMay2022.pdf" type="application/pdf" width="auto" height="auto"/>
   </body>
