--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Andrew's Resume</title>
   </head>
   <body>
-    <!-- <embed src="https://aaamg.github.io/folder/ResumeUpdatedMay2022.pdf" type="application/pdf" /> -->
-    <embed src="folder/ResumeUpdatedMay2022.pdf" type="application/pdf" width="auto" height="auto"/>
+    <embed src="https://aaamg.github.io/ResumeUpdatedMay2022.pdf" type="application/pdf" height="1000px" width="1000px" />
+    <embed src="ResumeUpdatedMay2022.pdf" type="application/pdf" width="auto" height="auto"/>
   </body>
