--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Andrew's Resume</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <embed src="https://aaamg.github.io/Andrew_Garcia_Resume.pdf" type="application/pdf" height="100%" width="100%" />
   </body>
+</html>
