--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <embed src="https://aaamg.github.io/Andrew_Garcia_Resume.pdf" type="application/pdf" height="100%" width="100%" />
+    <main classname="main">
+        <embed src="https://aaamg.github.io/Andrew_Garcia_Resume.pdf" type="application/pdf" height="100%" width="100%" />
+    </main>
   </body>
 </html>
