--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main classname="main">
-        <embed src="https://aaamg.github.io/Andrew_Garcia_Resume.pdf" type="application/pdf" height="100%" width="100%" />
+        <a href="https://aaamg.github.io/Andrew_Garcia_Resume.pdf">Resume avail here.</a>
     </main>
   </body>
 </html>
